// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Navigation|NavMenuItem default 1`] = `
<a
  aria-current={null}
  className="withRouter(NavMenuItem)-nav"
  href="/autem"
  onClick={[Function]}
>
  <li
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Hic sit minus
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </li>
</a>
`;

exports[`Storyshots Navigation|NavMenuItem disabled 1`] = `
<a
  aria-current={null}
  className="withRouter(NavMenuItem)-nav"
  href="/autem"
  onClick={[Function]}
>
  <li
    className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex="-1"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Hic sit minus
      </span>
    </div>
  </li>
</a>
`;

exports[`Storyshots Navigation|NavMenuItem disabled with onDisabledClick function 1`] = `
<a
  aria-current={null}
  className="withRouter(NavMenuItem)-nav"
  href="/autem"
  onClick={[Function]}
>
  <li
    className="MuiButtonBase-root MuiButtonBase-disabled MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-disabled MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex="-1"
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Hic sit minus
      </span>
    </div>
  </li>
</a>
`;

exports[`Storyshots Navigation|NavMenuItem with onClick function 1`] = `
<a
  aria-current={null}
  className="withRouter(NavMenuItem)-nav"
  href="/autem"
  onClick={[Function]}
>
  <li
    className="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-gutters"
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    <div
      className="MuiListItemText-root"
    >
      <span
        className="MuiTypography-root MuiTypography-subheading MuiListItemText-primary"
      >
        Hic sit minus
      </span>
    </div>
    <span
      className="MuiTouchRipple-root"
    />
  </li>
</a>
`;
